force-app/main/default/objects/LineItem__c/LineItem__c.object-meta.xml
<CustomObject>
    <label>LineItem</label>
    <nameField>
        <label>LineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>