force-app/main/default/objects/LineItem__c/fields/LineItem_Description__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Description__c</fullName>
    <label>LineItem Description</label>
    <type>TextArea</type>
</CustomField>