force-app/main/default/objects/LineItem__c/fields/LineItem_Price__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Price__c</fullName>
    <formula>Merchendise__r.Merchandise_Price__c  + (Merchendise__r.Merchandise_Price__c  * 25) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LineItem Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>