force-app/main/default/objects/LineItem__c/fields/LineItem_Stock__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Stock__c</fullName>
    <label>LineItem Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>