force-app/main/default/objects/LineItem__c/fields/Merchendise__c.field-meta.xml
<CustomField>
    <fullName>Merchendise__c</fullName>
    <label>Merchandise</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>LineItems</relationshipLabel>
    <relationshipName>LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>