force-app/main/default/objects/LineItem__c/validationRules/Validate_stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_stock</fullName>
    <active>true</active>
    <errorConditionFormula>LineItem_Stock__c  &gt;  Merchendise__r.Total_Remaing_Items__c</errorConditionFormula>
    <errorDisplayField>LineItem_Stock__c</errorDisplayField>
    <errorMessage>You Have Not Enough Stock</errorMessage>
</ValidationRule>